samples/_failures_safe/1761559260_bb4155_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75afe1ce.c: In function ‘main’:
./samples/SAFE/__tmp_75afe1ce.c:162:16: error: missing terminating " character
  162 |         printf("No
      |                ^~~
./samples/SAFE/__tmp_75afe1ce.c:162:9: error: expected expression at end of input
  162 |         printf("No
      |         ^~~~~~
./samples/SAFE/__tmp_75afe1ce.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_75afe1ce.c:162:9: error: expected declaration or statement at end of input
